--- a/public/style.css
+++ b/public/style.css
@@ -61,6 +61,16 @@ button[type="submit"] {
     cursor: pointer;
     transition: background 0.3s ease;
 }
+button[type="button"] {
+    background: #000000;
+    color: white;
+    padding: 12px;
+    width: 100%;
+    border: none;
+    border-radius: 6px;
+    cursor: pointer;
+    transition: background 0.3s ease;
+}
 
 button:hover {
     background-color: #0056b3;
