Please enter the commit message for your changes. Lines starting  with '' will be ignored, and an empty message aborts the commit.
 On branch main
 Your branch is up to date with 'origin/main'.

 Changes to be committed:
	modified:   api/index.js
	modified:   public/admin.html
	modified:   public/capture.html
	renamed:    public/style.css -> public/css/style.css
	modified:   public/final.html
	modified:   public/generate_qr.html
	modified:   public/index.html
	modified:   public/register.html
	modified:   public/scan.html
	renamed:    public/admin.js -> public/scripts/admin.js
	renamed:    public/canvas.js -> public/scripts/canvas.js
	renamed:    public/captcha.js -> public/scripts/captcha.js
	renamed:    public/generateQR.js -> public/scripts/generateQR.js
	renamed:    public/register.js -> public/scripts/register.js
	renamed:    public/scan.js -> public/scripts/scan.js
	renamed:    public/script.js -> public/scripts/script.js
	renamed:    public/verify.js -> public/scripts/verify.js
	renamed:    public/vote.js -> public/scripts/vote.js
	modified:   public/verify.html
	modified:   public/vote.html

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -238,12 +238,12 @@ ul li {
     margin-top: 10px;
 }
 
-/* Expand Help Content */
+
 .help-box.active .help-content {
     display: block;
 }
 
-/* Media Queries for Responsiveness */
+
 @media (max-width: 768px) {
     .login-container, .container, .admin-container {
         width: 95%; 
@@ -271,26 +271,26 @@ ul li {
 
     .login-container {
         padding: 15px;
-        height: auto; /* Allow height to adjust dynamically */
+        height: auto; 
     }
 
     .help-box {
-        bottom: 10px; /* Move help box up a bit */
+        bottom: 10px; 
         right: 10px;
     }
 
     .container, .admin-container {
-        width: 100%; /* Ensure container elements take up the full width on very small screens */
+        width: 100%; 
         padding: 10px;
     }
 
     input, button {
-        padding: 12px; /* Increase padding for better touch interactions on mobile */
+        padding: 12px; 
         font-size: 16px;
     }
 
     .preview {
-        width: 100px; /* Reduce image size for smaller screens */
+        width: 100px; 
         height: 100px;
     }
 }
