modified:   public/css/style.css 	modified:   public/index.html 	modified:   public/scripts/script.js

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -375,6 +375,9 @@ input:focus::placeholder {
     color: gray;
     font-style: italic;
 }
+.hidden {
+    display: none;
+}
 
 
 .login-input:focus {
