--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3,7 +3,6 @@ body {
     font-family: Arial, sans-serif;
     display: flex;
     justify-content: center;
-    align-items: center;
     background-color: #f4f4f4;
     margin: 0;
     min-height: 100vh;
@@ -11,7 +10,6 @@ body {
 
 .login-container {
     background-color: #00000094;
-    padding: 20px;
     margin-right: 10px;
     border-radius: 8px;
     box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.1);
@@ -238,6 +236,35 @@ ul li {
     margin-top: 10px;
 }
 
+/* Welcome Screen Styling */
+#welcome-screen {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: transparent;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    z-index: 1000;
+}
+
+#welcome-text {
+    font-size: 3rem;
+    margin-bottom: 20px;
+}
+
+#select-language {
+    padding: 10px;
+    font-size: 1.2rem;
+}
+
+@media (max-width: 768px) {
+    #welcome-text {
+        font-size: 2.5rem;
+    }
 
 .help-box.active .help-content {
     display: block;
