--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3,6 +3,7 @@ body {
     font-family: Arial, sans-serif;
     display: flex;
     justify-content: center;
+    align-items: center;
     background-color: #f4f4f4;
     margin: 0;
     min-height: 100vh;
@@ -10,6 +11,7 @@ body {
 
 .login-container {
     background-color: #00000094;
+    padding: 20px;
     margin-right: 10px;
     border-radius: 8px;
     box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.1);
@@ -402,9 +404,6 @@ input:focus::placeholder {
 .login-input option[value=""] {
     color: gray;
     font-style: italic;
-}
-.hidden {
-    display: none;
 }
 
 
