--- a/public/css/style.css
+++ b/public/css/style.css
@@ -252,6 +252,10 @@ ul li {
 /* Welcome Screen Styling */
 #welcome-screen {
     position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -260,10 +264,11 @@ ul li {
     background-color: whitesmoke;
     padding: 2rem;
     border-radius: 10px;
-    max-width: 400px;
-    margin: 0 auto;
+    box-shadow: 
+        0 0 60px 25px rgba(0, 0, 0, 0.9), 
+        inset 0 0 40px rgba(0, 0, 0, 0.7);
     text-align: center;
-    box-shadow: 0 0 60px 25px rgba(0, 0, 0, 0.9);
+    overflow: hidden; 
 }
 
 #welcome-text {
