Changes to be committed: 	modified:   public/css/style.css

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -278,7 +278,8 @@ ul li {
 }
 
 #language-selector {
-    width: 100%;
+    width: 50%;
+    max-width: 786px;
     padding: 10px;
     margin: 10px 0;
     font-size: 16px;
