--- a/public/css/style.css
+++ b/public/css/style.css
@@ -4,7 +4,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: #f4f4f4;
+    background-color:beige;
     margin: 0;
     min-height: 100vh;
 }
