Changes to be committed: 	modified:   public/css/style.css

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -457,27 +457,38 @@ input:focus::placeholder {
     outline: none;
     box-shadow: 0 0 5px rgba(0, 123, 255, 0.5);
 }
+
 .password-container {
     position: relative;
-    display: inline-block;
+    width: 100%;
 }
 
+
 .password-container input[type="password"] {
-    padding-right: 30px; /* Add space for the checkbox */
+    width: 100%; 
+    padding: 12px;
+    padding-right: 35px; 
+    border-radius: 10px;
+    font-size: 16px;
+    border: 1px solid #ccc;
+    background-color: beige; 
 }
 
 .password-container input[type="checkbox"] {
     position: absolute;
     top: 50%;
-    right: 5px; /* Position checkbox inside the password box */
+    right: 10px; 
     transform: translateY(-50%);
+    width: auto;
+    height: auto;
 }
 
 .password-container label {
     position: absolute;
-    right: 5px;
+    right: 30px; 
     top: 50%;
     transform: translateY(-50%);
-    margin-left: 10px;
     font-size: 12px;
+    margin-left: 10px;
+    cursor: pointer;
 }
